[package]
name = "list-maps"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osu-db-dump = { path="../osu-db-dump" }
nom = "6.1.2"
clap = "3.0.0-beta.2"
anyhow = "1.0.40"
serde = { version="1.0.125", features=["derive"] }
