[package]
name = "list_maps"
version = "0.1.0"
authors = ["ekrctb <ekrctb@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.3"
osu_api = { path = "../osu_api" }
structopt = "0.2.13"
chrono = "0.4.6"
reqwest = "0.9.5"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = { version = "1.0.33", features = ["raw_value"] }
sled = "0.16"
