[package]
name = "osu-db-dump"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
atoi = "0.4.0"
duplicate = "0.2.9"
thiserror = "1.0.24"
serde = { version="1.0.125", features=["derive"] }
