[package]
name = "osu_api"
version = "0.1.0"
authors = ["ekrctb <ekrctb@gmail.com>"]
edition = "2018"

[dependencies]
osu_api_internal_derive = { path = "../derive" }
reqwest = "0.9.5"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
serde_urlencoded = "0.5.4"
failure = "0.1.3"
chrono = { version = "0.4", features = ["serde"] }
serde-humantime = "0.1.1"
num_enum = "0.1.1"
bitflags = "1.0.4"
